[package]
name = "alica-messages-tp"
version = "0.1.0"
authors = ["Sven Starcke <sst97@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
data-encoding = "2.2.1"
mockall = "0.7.1"
sawtooth-sdk = "0.4.4"
sha2 = "0.9.0"